@@ -20,6 +20,11 @@
             <artifactId>selenium-java</artifactId>
             <version>4.20.0</version>  <!-- Use the latest stable version -->
         </dependency>
+        <dependency>
+            <groupId>com.aventstack</groupId>
+            <artifactId>extentreports</artifactId>
+            <version>5.1.2</version>
+        </dependency>
 
         <!-- TestNG Dependency -->
         <dependency>
@@ -47,7 +52,19 @@
 <!--        </dependency>-->
 
     </dependencies>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>21</source>
+                    <target>21</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 
 </project>
